feat: 新增login畫面的layout

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,1 +1,29 @@
-<p>login works!</p>
+
+<div class="login-bg vh-100 d-flex justify-content-center align-items-center px-3 px-md-0">
+<div class="container login-container bg-teal px-3 pe-md-5">
+  <div class="row">
+    <div class="col-6 d-md-flex d-none justify-content-center">
+      <img class="banner" src="/assets/login-left.svg" alt="大圖片">
+    </div>
+    <div class="col-12 col-md-6 d-flex justify-content-center flex-column">
+      <h1 class="logo fw-bold text-center text-primary mb-0" font="paytone">MetaWall</h1>
+      <h2 class="subtitle fw-bold text-center text-black" font="helvetica">到元宇宙展開全新社交圈</h2>
+      <ul class="list-unstyled">
+        <li class="mb-3">
+          <input type="email" name="" id="" class="custom-input custom-input-black w-100" placeholder="Email">
+        </li>
+        <li class="mb-3">
+          <input type="password" name="" id="" class="custom-input custom-input-black w-100" placeholder="Password">
+        </li>
+        <li class="mb-3">
+          <button type="button" class="custom-btn custom-btn-primary custom-btn-primary--hover w-100 fw-bold pt-3 pb-3" font="azeret">登入</button>
+        </li>
+        <li class="text-center">
+          <a href="#" class="text-dark text-decoration-none custom-link-primary--hover text-underline--hover" font="azeret">註冊帳號</a>
+        </li>
+      </ul>
+    </div>
+  </div>
+
+</div>
+</div>
