--- a/src/scss/utils/_utils.scss
+++ b/src/scss/utils/_utils.scss
@@ -9,3 +9,15 @@
 .lh-min-base {
   line-height: 1.4;
 }
+
+.letter-spacing-0 {
+  letter-spacing: 0px;
+}
+
+.bd-black {
+  border-color: #000400;
+}
+
+.custom-bd-b-1 {
+  border-bottom: 3px solid;
+}
