--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,4 +1,4 @@
-<p>header works!</p>
-<div class="container">
-  <h1 class="logo lh-min-base fw-bold text-black mb-0" font="paytone">MetaWall</h1>
+<div class="container d-flex justify-content-between px-md-0 py-2 my-1">
+  <h1 class="logo lh-min-base fw-bold text-black mb-0 d-flex align-items-end" font="paytone">MetaWall</h1>
+  <app-header-profile></app-header-profile>
 </div>
