--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -3,6 +3,7 @@
 /* You can add global styles to this file, and also import other style files */
 @import "./function/function";
 @import "./utils/utils";
+@import "./utils/border";
 @import "./font/font";
 @import "./component/button";
 @import "./component/input";
