--- a/src/scss/function/_function.scss
+++ b/src/scss/function/_function.scss
@@ -1,3 +1,7 @@
 @function tint($color, $percentage) {
   @return mix(white, $color, $percentage);
 }
+
+@function dark($color, $percentage) {
+  @return mix(black, $color, $percentage);
+}
