--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -1,1 +1,27 @@
-<p>sidebar works!</p>
+<ul class="list-unstyled py-5 px-4 custom-bd-1 bd-black">
+  <li class="mb-4">
+    <button type="button" class="custom-btn custom-btn-primary custom-btn-primary--hover w-100 fw-bold pt-3 pb-3" font="azeret">張貼動態</button>
+  </li>
+  <li class="mb-4">
+    <div class="d-flex align-items-center">
+      <img class=" me-3" src="/assets/user.png" alt="">
+      <p class="text-black fw-bold lh-base mb-0" font="noto">邊緣小杰</p>
+    </div>
+  </li>
+  <li class="mb-4">
+    <div class="d-flex align-items-center">
+      <button class="d-flex justify-content-center align-items-center sidebar-btn custom-btn-info custom-btn-info--hover rounded-circle custom-bd-1 bd-black me-3">
+        <img class="bell-icon" src="/assets/bell-regular.svg" alt="鈴鐺">
+      </button>
+      <p class="text-black fw-bold lh-base mb-0" font="noto">追蹤名單</p>
+    </div>
+  </li>
+  <li class="">
+    <div class="d-flex align-items-center">
+      <button class="d-flex justify-content-center align-items-center sidebar-btn custom-btn-info custom-btn-info--hover rounded-circle custom-bd-1 bd-black me-3">
+        <img class="like-icon" src="/assets/like.svg" alt="讚">
+      </button>
+      <p class="text-black fw-bold lh-base mb-0" font="noto">我按讚的文章</p>
+    </div>
+  </li>
+</ul>
