feat:添加共通button樣式

--- a/src/scss/component/_button.scss
+++ b/src/scss/component/_button.scss
@@ -14,3 +14,13 @@
   background: tint($blue, 20%);
   color: #fff;
 }
+
+.custom-btn-info {
+  background: $cyan;
+  color: #fff;
+}
+
+.custom-btn-info--hover:hover {
+  background: dark($cyan, 20%);
+  color: #fff;
+}
