--- a/src/app/pages/main/main.component.html
+++ b/src/app/pages/main/main.component.html
@@ -1,1 +1,5 @@
-<p>main works!</p>
+<app-header></app-header>
+<main class="container">
+  <app-post></app-post>
+  <app-sidebar></app-sidebar>
+</main>
