--- a/src/scss/component/_input.scss
+++ b/src/scss/component/_input.scss
@@ -2,6 +2,10 @@
   padding: 1rem 2rem;
 }
 
+.custom-input-sm {
+  padding: 0.75rem 1rem;
+}
+
 .custom-input-black {
   border: 2px solid $black;
 
