--- a/src/app/components/post-search-bar/post-search-bar.component.html
+++ b/src/app/components/post-search-bar/post-search-bar.component.html
@@ -1,1 +1,18 @@
-<p>post-search-bar works!</p>
+<div class="row">
+  <div class="col-3">
+    <div class="search-sort-wrapper">
+      <select class="search-sort custom-input-sm custom-input-black lh-sm-base w-100" id="floatingSelect" aria-label="Floating label select example">
+        <option selected>最新貼文</option>
+        <option value="1">One</option>
+        <option value="2">Two</option>
+        <option value="3">Three</option>
+      </select>
+    </div>
+  </div>
+  <div class="col-9 d-flex">
+    <input type="text" class="search-input custom-input-sm custom-input-black w-100 lh-sm-base bd-r-0" placeholder="搜尋貼文">
+    <button class="search-btn">
+      <img class="search-icon" src="/assets/magnifying-glass-solid.svg" alt="搜尋">
+    </button>
+  </div>
+</div>
