--- a/src/app/pages/main/main.component.html
+++ b/src/app/pages/main/main.component.html
@@ -1,5 +1,11 @@
 <app-header></app-header>
 <main class="container">
-  <app-post></app-post>
-  <app-sidebar></app-sidebar>
+  <div class="row">
+    <div class="col-12 col-lg-8">
+      <app-post></app-post>
+    </div>
+    <div class="col-0 col-lg-4 d-none d-lg-block">
+      <app-sidebar></app-sidebar>
+    </div>
+  </div>
 </main>
