--- a/src/scss/font/_font.scss
+++ b/src/scss/font/_font.scss
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Paytone+One&display=swap');
 @import url('http://fonts.cdnfonts.com/css/helvetica-neue-9');
-@import url('https://fonts.googleapis.com/css2?family=Azeret+Mono:wght@400;700&family=Noto+Sans+TC:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Azeret+Mono:wght@400;700&family=Baloo+Da+2&family=Noto+Sans+TC:wght@400;700&display=swap');
 
 [font~=paytone] {
   font-family: "Paytone One",sans-serif;
@@ -16,4 +16,8 @@
 
 [font~=noto] {
   font-family: "Noto Sans TC";
+}
+
+[font~=baloo] {
+  font-family: "Baloo Da 2";
 }
