--- a/src/app/components/post-list/post-list.component.html
+++ b/src/app/components/post-list/post-list.component.html
@@ -1,1 +1,10 @@
-<p>post-list works!</p>
+<div class="mb-3">
+  <app-post-search-bar></app-post-search-bar>
+</div>
+<ul class="list-unstyled">
+  <li>
+    <div>
+      <app-post></app-post>
+    </div>
+  </li>
+</ul>
