--- a/src/app/pages/main/main.component.html
+++ b/src/app/pages/main/main.component.html
@@ -2,7 +2,7 @@
 <main class="container">
   <div class="row">
     <div class="col-12 col-lg-8">
-      <app-post></app-post>
+      <app-post-list></app-post-list>
     </div>
     <div class="col-0 col-lg-4 d-none d-lg-block">
       <app-sidebar></app-sidebar>
