--- a/src/app/components/post-user-profile/post-user-profile.component.html
+++ b/src/app/components/post-user-profile/post-user-profile.component.html
@@ -1,1 +1,9 @@
-<p>post-user-profile works!</p>
+<div class="d-flex align-items-center">
+  <img class="post-user-profile-photo me-3" src="/assets/user.png" alt="用戶大頭貼">
+  <div class="d-flex flex-column">
+    <p class="text-black line-base mb-0" font="noto">邊緣小杰</p>
+    <p class="text-gray-1100 fs-7 mb-0">
+      <time>2022/1/10 12:00</time>
+    </p>
+  </div>
+</div>
