--- a/src/app/components/post/post.component.html
+++ b/src/app/components/post/post.component.html
@@ -1,1 +1,29 @@
-<app-post-search-bar></app-post-search-bar>
+<div class="p-4">
+  <div class="mb-3">
+    <app-post-user-profile></app-post-user-profile>
+  </div>
+  <p class="" font="noto">
+    外面看起來就超冷....<br>
+     我決定回被窩繼續睡....>.<
+  </p>
+  <div class="mb-3 pb-1">
+    <img class="post-photo border border-2 bd-black rounded-3" src="/assets/mailchimp-Vc2dD4l57og-unsplash.jpg" alt="照片">
+  </div>
+  <div class="d-flex align-items-center mb-3 pb-1">
+    <div class="post-like-btn d-inline-flex rounded-5 me-2">
+      <img class="post-like" src="/assets/like.svg" alt="讚">
+    </div>
+    <p class="mb-0" font="baloo">12</p>
+  </div>
+  <div class="row">
+    <div class="col-1">
+      <img class="comment-user-photo me-2" src="/assets/user.png" alt="用戶照片">
+    </div>
+    <div class="col-11 d-flex align-items-center">
+      <input type="text" class="comment-input custom-input-sm custom-input-black w-100 lh-sm-base bd-r-0" placeholder="留言...">
+      <button class="comment-btn bg-primary text-white lh-sm-base border border-2 bd-black" font="azeret">
+        留言
+      </button>
+    </div>
+  </div>
+</div>
