--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -6,6 +6,8 @@
 @import "./utils/utils";
 @import "./utils/border";
 @import "./utils/color";
+@import "./utils/background";
+@import "./utils/margin";
 @import "./font/font";
 @import "./font/font-size";
 @import "./component/button";
