fix: 添加comment component 內容

--- a/src/app/components/comment/comment.component.html
+++ b/src/app/components/comment/comment.component.html
@@ -1,1 +1,6 @@
-<p>comment works!</p>
+<div class="bg-teal p-3 rounded-3-5">
+  <div class="mb-1">
+    <app-post-user-profile postUserProfilePhotoClass="me-2-5"></app-post-user-profile>
+  </div>
+  <p class="comment-content mb-0">真的～我已經準備冬眠了</p>
+</div>
