fix: 添加post外框式樣

--- a/src/app/components/post/post.component.html
+++ b/src/app/components/post/post.component.html
@@ -1,4 +1,4 @@
-<div class="p-4">
+<div class="post border border-2 bd-black rounded-2 p-4">
   <div class="mb-3">
     <app-post-user-profile postUserProfilePhotoClass="me-3"></app-post-user-profile>
   </div>
@@ -15,7 +15,7 @@
     </div>
     <p class="mb-0" font="baloo">12</p>
   </div>
-  <div class="row">
+  <div class="row mb-3">
     <div class="col-1">
       <img class="comment-user-photo me-2" src="/assets/user.png" alt="用戶照片">
     </div>
