fix: 更改M字母錯誤使用全形問題

--- a/src/app/components/header-profile/header-profile.component.html
+++ b/src/app/components/header-profile/header-profile.component.html
@@ -1,7 +1,7 @@
 <div class="d-flex align-items-center">
   <img class="header-profile-photo" src="/assets/user.png" alt="用戶大頭貼">
   <div>
-    <p class="text-black fw-bold lh-min-base letter-spacing-0 mb-1" font="azeret">Ｍember</p>
+    <p class="text-black fw-bold lh-min-base letter-spacing-0 mb-1" font="azeret">Member</p>
     <div class="custom-underline"></div>
   </div>
 </div>
