fix: 修正搜尋bar的手機版型不相符問題

--- a/src/app/components/post-search-bar/post-search-bar.component.html
+++ b/src/app/components/post-search-bar/post-search-bar.component.html
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="col-3">
+  <div class="col-12 col-md-3 mb-2 mb-md-0">
     <div class="search-sort-wrapper">
       <select class="search-sort custom-input-sm custom-input-black lh-sm-base w-100" id="floatingSelect" aria-label="Floating label select example">
         <option selected>最新貼文</option>
@@ -9,9 +9,9 @@
       </select>
     </div>
   </div>
-  <div class="col-9 d-flex">
+  <div class="col-12 col-md-9 d-flex">
     <input type="text" class="search-input custom-input-sm custom-input-black w-100 lh-sm-base bd-r-0" placeholder="搜尋貼文">
-    <button class="search-btn">
+    <button class="search-btn bg-primary">
       <img class="search-icon" src="/assets/magnifying-glass-solid.svg" alt="搜尋">
     </button>
   </div>
