--- a/src/app/components/post/post.component.html
+++ b/src/app/components/post/post.component.html
@@ -16,10 +16,10 @@
     <p class="mb-0" font="baloo">12</p>
   </div>
   <div class="row mb-3">
-    <div class="col-1">
+    <div class="d-none d-md-block col-md-1">
       <img class="comment-user-photo me-2" src="/assets/user.png" alt="用戶照片">
     </div>
-    <div class="col-11 d-flex align-items-center">
+    <div class="col-12 col-md-11 d-flex align-items-center">
       <input type="text" class="comment-input custom-input-sm custom-input-black w-100 lh-sm-base bd-r-0" placeholder="留言...">
       <button class="comment-btn bg-primary text-white lh-sm-base border border-2 bd-black" font="azeret">
         留言
