feat: 添加mobile-navigator-bar內容

--- a/src/app/pages/main/main.component.html
+++ b/src/app/pages/main/main.component.html
@@ -9,3 +9,8 @@
     </div>
   </div>
 </main>
+<footer class="d-md-none w-100 fixed-bottom">
+  <div class="container">
+    <app-mobile-navigator-bar></app-mobile-navigator-bar>
+  </div>
+</footer>
