--- a/src/app/components/mobile-navigator-bar/mobile-navigator-bar.component.html
+++ b/src/app/components/mobile-navigator-bar/mobile-navigator-bar.component.html
@@ -1,1 +1,15 @@
-<p>mobile-navigator-bar works!</p>
+
+<ul class="navigator-bar list-unstyled d-flex bd-black justify-content-around bg-teal py-2">
+  <li>
+    <button class="navigator-btn d-flex justify-content-center align-items-center rounded-circle border border-2 bd-black"><img class="home-icon" src="/assets/home.svg" alt=""></button>
+  </li>
+  <li>
+    <button class="navigator-btn d-flex justify-content-center align-items-center rounded-circle border border-2 bd-black"><img class="alert-icon" src="/assets/bell-regular.svg" alt=""></button>
+  </li>
+  <li>
+    <button class="navigator-btn d-flex justify-content-center align-items-center rounded-circle border border-2 bd-black"><img class="like-icon" src="/assets/like.svg" alt=""></button>
+  </li>
+  <li>
+    <button class="navigator-btn d-flex justify-content-center align-items-center rounded-circle border border-2 bd-black bg-primary"><img class="add-icon" src="/assets/add.svg" alt=""></button>
+  </li>
+</ul>
