feat: 添加共通filter class

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -8,6 +8,7 @@
 @import "./utils/color";
 @import "./utils/background";
 @import "./utils/margin";
+@import "./utils/filter";
 @import "./font/font";
 @import "./font/font-size";
 @import "./component/button";
