feat: 添加共通 hover class

--- a/src/scss/utils/_background.scss
+++ b/src/scss/utils/_background.scss
@@ -1,3 +1,11 @@
 .bg-teal {
   background: $teal;
 }
+
+.bg-primary--hover:hover {
+  background: $blue !important;
+}
+
+.bg-blue-700--hover:hover {
+  background: tint($blue, 70%) !important;
+}
