feat: 添加共通背景色

--- a/src/scss/utils/_background.scss
+++ b/src/scss/utils/_background.scss
@@ -9,3 +9,7 @@
 .bg-blue-700--hover:hover {
   background: tint($blue, 70%) !important;
 }
+
+.custom-bg-primary {
+  background: url("/assets/bg.svg");
+}
