--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,4 +1,4 @@
-<div class="container d-flex justify-content-between py-2 my-1">
+<div class="container d-flex justify-content-between py-4 py-md-2  my-0 my-md-1">
   <h1 class="logo lh-min-base fw-bold text-black mb-0 d-flex align-items-end" font="paytone">MetaWall</h1>
   <app-header-profile></app-header-profile>
 </div>
