fix: 調整post背景色

--- a/src/app/components/post/post.component.html
+++ b/src/app/components/post/post.component.html
@@ -1,4 +1,4 @@
-<div class="post border border-2 bd-black rounded-2 p-4">
+<div class="post bg-white border border-2 bd-black rounded-2 p-4">
   <div class="mb-3">
     <app-post-user-profile postUserProfilePhotoClass="me-3"></app-post-user-profile>
   </div>
