--- a/src/app/components/comment/comment.component.html
+++ b/src/app/components/comment/comment.component.html
@@ -1,4 +1,4 @@
-<div class="bg-teal p-3 rounded-3-5">
+<div class="bg-teal border border-1 bd-black rounded-3-5 p-3">
   <div class="mb-1">
     <app-post-user-profile postUserProfilePhotoClass="me-2-5"></app-post-user-profile>
   </div>
