feat: 修正 search sort 的背景色

--- a/src/app/components/post-search-bar/post-search-bar.component.html
+++ b/src/app/components/post-search-bar/post-search-bar.component.html
@@ -1,7 +1,7 @@
 <div class="row">
   <div class="col-12 col-md-3 mb-2 mb-md-0">
     <div class="search-sort-wrapper">
-      <select class="search-sort custom-input-sm custom-input-black lh-sm-base w-100" id="floatingSelect" aria-label="Floating label select example">
+      <select class="search-sort bg-white custom-input-sm custom-input-black lh-sm-base w-100" id="floatingSelect" aria-label="Floating label select example">
         <option selected>最新貼文</option>
         <option value="1">One</option>
         <option value="2">Two</option>
