fix: 修正 mobile-navigator-bar位置，使其能夠出現在main tag的下緣

--- a/src/app/pages/main/main.component.html
+++ b/src/app/pages/main/main.component.html
@@ -1,7 +1,7 @@
 <div class="custom-bd-b-1 bd-black">
   <app-header></app-header>
 </div>
-<div class="custom-bg-primary pt-md-5 pt-3">
+<div class="main-wrapper custom-bg-primary pt-md-5 pt-3">
   <main class="container">
     <div class="row">
       <div class="col-12 col-lg-8">
