feat: 新增post-personal-profile component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,12 @@
 <router-outlet></router-outlet>
+<ul>
+  <li>
+    <a routerLink="/login">Login</a>
+  </li>
+  <li>
+    <a routerLink="/header">header</a>
+  </li>
+  <li>
+    <a routerLink="/main">main</a>
+  </li>
+</ul>
