--- a/src/app/components/post-personal-profile/post-personal-profile.component.html
+++ b/src/app/components/post-personal-profile/post-personal-profile.component.html
@@ -1,1 +1,14 @@
-<p>post-personal-profile works!</p>
+<div class="media-block-rounded-2-wrapper media-block-rounded-2-wrapper d-flex rounded-2">
+  <div class="">
+    <img class="media-block-rounded-2-photo post-personal-profile-photo bd-black" src="/assets/christopher-campbell-rDEOVtE7vOs-unsplash.jpg" alt="">
+  </div>
+  <div class="media-block-rounded-2-content d-flex align-items-center justify-content-between bg-white w-100 px-3">
+    <div>
+      <p class="mb-0" font="noto">阿爾敏</p>
+      <p class="mb-0">987,987 人追蹤</p>
+    </div>
+    <div>
+      <button font="noto" class="follow-btn btn btn-warning fw-bold line-base border border-2 bd-black box-shadow-d-1 box-shadow-black">追蹤</button>
+    </div>
+  </div>
+</div>
