feat: 添加共通border css顏色

--- a/src/scss/utils/_border.scss
+++ b/src/scss/utils/_border.scss
@@ -1,6 +1,12 @@
 .bd-black {
   border-color: #000400!important;
 }
+.bd-gray-1500 {
+  border-color: $gray-1500!important;
+}
+.bd-black {
+  border-color: #000400!important;
+}
 
 .custom-bd-b-1 {
   border-bottom: 3px solid;
