--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -10,6 +10,7 @@
 @import "./utils/margin";
 @import "./utils/filter";
 @import "./utils/box-shadow";
+@import "./utils/pseudo";
 @import "./font/font";
 @import "./font/font-size";
 @import "./component/button";
