--- a/src/app/components/post-personal-profile/post-personal-profile.component.html
+++ b/src/app/components/post-personal-profile/post-personal-profile.component.html
@@ -1,8 +1,8 @@
-<div class="media-block-rounded-2-wrapper media-block-rounded-2-wrapper d-flex rounded-2">
+<div class="media-primary-wrapper pseudo-after-bd-radius d-flex rounded-2">
   <div class="">
-    <img class="media-block-rounded-2-photo post-personal-profile-photo bd-black" src="/assets/christopher-campbell-rDEOVtE7vOs-unsplash.jpg" alt="">
+    <img class="media-primary-photo rounded-start post-personal-profile-photo bd-black" src="/assets/christopher-campbell-rDEOVtE7vOs-unsplash.jpg" alt="">
   </div>
-  <div class="media-block-rounded-2-content d-flex align-items-center justify-content-between bg-white w-100 px-3">
+  <div class="media-primary-content rounded-end d-flex align-items-center justify-content-between bg-white w-100 px-3">
     <div>
       <p class="mb-0" font="noto">阿爾敏</p>
       <p class="mb-0">987,987 人追蹤</p>
