feat: 添加following-header區塊式樣

--- a/src/app/pages/main/main.component.html
+++ b/src/app/pages/main/main.component.html
@@ -9,9 +9,14 @@
           <app-post-personal-profile></app-post-personal-profile>
         </div>
         <div class="mb-3">
-          <app-post-empty></app-post-empty>
+          <app-post-empty hidden></app-post-empty>
         </div>
-        <app-post-list></app-post-list>
+        <div>
+          <app-post-list hidden></app-post-list>
+        </div>
+        <div>
+          <app-following></app-following>
+        </div>
       </div>
       <div class="col-0 col-lg-4 d-none d-lg-block">
         <app-sidebar></app-sidebar>
