--- a/src/app/components/following/following.component.html
+++ b/src/app/components/following/following.component.html
@@ -1,1 +1,13 @@
-<p>following works!</p>
+
+<div class="media-primary-wrapper">
+  <div class="bg-white border border-2 bd-black">
+    <p class="following-header fs-5 text-center fw-blod mb-0" font="azeret" >
+      追蹤名單
+    </p>
+  </div>
+</div>
+<ul class="list-unstyled mb-0">
+  <li>
+    <app-following-media></app-following-media>
+  </li>
+</ul>
