feat: 添加共通box-shadow class

--- a/src/scss/utils/_box-shadow.scss
+++ b/src/scss/utils/_box-shadow.scss
@@ -1,6 +1,9 @@
 .box-shadow-d-1 {
   box-shadow: 0px 2px 0px;
 }
+.box-shadow-d-2 {
+  box-shadow: 0px 3px 0px;
+}
 
 .box-shadow-black {
   box-shadow: $black;
