--- a/src/app/components/following-media/following-media.component.html
+++ b/src/app/components/following-media/following-media.component.html
@@ -1,1 +1,20 @@
-<p>following-media works!</p>
+<div class="d-flex bg-white border border-2 bd-black box-shadow-d-2 box-shadow-black rounded-2 p-3">
+  <div class="d-flex align-items-center m-auto me-3">
+    <img class="following-user-photo" src="/assets/user.png" alt="">
+  </div>
+  <div class="d-flex justify-content-between w-100">
+    <div>
+      <p class="line-base mb-0" font="noto">
+        愛爾敏
+      </p>
+      <p class="text-gray-1100 lh-m-base fs-7 mb-0" font="noto">
+        追蹤時間：2022/1/10 12:00
+      </p>
+    </div>
+    <div class="h-100 d-flex align-items-end fs-7 lh-m-base" font="noto">
+      <p class="mb-0">
+        您已追蹤 90 天！
+      </p>
+    </div>
+  </div>
+</div>
