--- a/src/app/components/following/following.component.html
+++ b/src/app/components/following/following.component.html
@@ -1,5 +1,5 @@
 
-<div class="media-primary-wrapper">
+<div class="media-primary-wrapper mb-3">
   <div class="bg-white border border-2 bd-black">
     <p class="following-header fs-5 text-center fw-blod mb-0" font="azeret" >
       追蹤名單
