--- a/src/app/components/following/following.component.html
+++ b/src/app/components/following/following.component.html
@@ -1,11 +1,4 @@
-
-<div class="media-primary-wrapper mb-3">
-  <div class="bg-white border border-2 bd-black">
-    <p class="following-header fs-5 text-center fw-blod mb-0" font="azeret" >
-      追蹤名單
-    </p>
-  </div>
-</div>
+<app-main-header-primary title="追蹤名單"></app-main-header-primary>
 <ul class="list-unstyled mb-0">
   <li *ngFor="let item of items;let idx=index" class="" [class]="{'mb-3':idx!==(items.length-1)}">
     <app-following-media></app-following-media>
