--- a/src/app/components/main-header-primary/main-header-primary.component.html
+++ b/src/app/components/main-header-primary/main-header-primary.component.html
@@ -1,1 +1,8 @@
-<p>main-header-primary works!</p>
+
+<div class="media-primary-wrapper mb-3">
+  <div class="bg-white border border-2 bd-black">
+    <p class="header-content fs-5 text-center fw-blod mb-0" font="azeret" >
+      {{title}}
+    </p>
+  </div>
+</div>
