fix: 調整title tag

--- a/src/app/components/main-header-primary/main-header-primary.component.html
+++ b/src/app/components/main-header-primary/main-header-primary.component.html
@@ -1,8 +1,8 @@
 
 <div class="media-primary-wrapper mb-3">
   <div class="bg-white border border-2 bd-black">
-    <p class="header-content fs-5 text-center fw-blod mb-0" font="azeret" >
+    <h2 class="header-content fs-5 text-center fw-blod mb-0" font="azeret" >
       {{title}}
-    </p>
+    </h2>
   </div>
 </div>
