--- a/src/app/components/post/post.component.html
+++ b/src/app/components/post/post.component.html
@@ -7,7 +7,7 @@
      我決定回被窩繼續睡....>.<
   </p>
   <div class="mb-3 pb-1">
-    <img class="post-photo border border-2 bd-black rounded-3" src="/assets/mailchimp-Vc2dD4l57og-unsplash.jpg" alt="照片">
+    <app-post-image></app-post-image>
   </div>
   <div class="d-flex align-items-center mb-3 pb-1">
     <div class="post-like-btn d-inline-flex rounded-5 me-2">
