fix:修正line-height 1.5 設定無效錯誤

--- a/src/app/components/post-edit/post-edit.component.html
+++ b/src/app/components/post-edit/post-edit.component.html
@@ -1,9 +1,9 @@
 <app-main-header-primary title="張貼動態"></app-main-header-primary>
 <div class="d-flex flex-column border border-2 bd-black bg-white rounded-2 box-shadow-d-2 box-shadow-black p-4">
-  <h3 class="fs-6 line-base text-black mb-1" font="noto">貼文內容</h3>
+  <h3 class="fs-6 lh-base text-black mb-1" font="noto">貼文內容</h3>
   <textarea class="post-edit-textarea border border-2 bd-black custom-input-placeholder-gray-1100 mb-3" name="" id="" cols="30" rows="10" placeholder="輸入您的貼文內容"></textarea>
   <div class="mb-3">
-    <button type="button" class="py-1 px-4 rounded-1 custom-btn-black custom-btn-black--hover line-base" font="noto">上傳圖片</button>
+    <button type="button" class="py-1 px-4 rounded-1 custom-btn-black custom-btn-black--hover lh-base" font="noto">上傳圖片</button>
   </div>
   <div class="mb-4">
     <app-post-image></app-post-image>
