--- a/src/app/components/post-empty/post-empty.component.html
+++ b/src/app/components/post-empty/post-empty.component.html
@@ -13,6 +13,6 @@
     </ul>
   </div>
   <div class="d-flex justify-content-center align-items-center">
-    <p font="noto" class="text-gray-1100 line-base py-4  my-2">目前尚無動態，新增一則貼文吧！</p>
+    <p font="noto" class="text-gray-1100 lh-base py-4  my-2">目前尚無動態，新增一則貼文吧！</p>
   </div>
 </div>
