--- a/src/app/components/post-personal-profile/post-personal-profile.component.html
+++ b/src/app/components/post-personal-profile/post-personal-profile.component.html
@@ -8,7 +8,7 @@
       <p class="mb-0">987,987 人追蹤</p>
     </div>
     <div>
-      <button font="noto" class="follow-btn btn btn-warning fw-bold line-base border border-2 bd-black box-shadow-d-1 box-shadow-black">追蹤</button>
+      <button font="noto" class="follow-btn btn btn-warning fw-bold lh-base border border-2 bd-black box-shadow-d-1 box-shadow-black">追蹤</button>
     </div>
   </div>
 </div>
