--- a/src/app/components/following-media/following-media.component.html
+++ b/src/app/components/following-media/following-media.component.html
@@ -4,7 +4,7 @@
   </div>
   <div class="d-flex justify-content-between w-100">
     <div>
-      <p class="line-base mb-0" font="noto">
+      <p class="lh-base mb-0" font="noto">
         愛爾敏
       </p>
       <p class="text-gray-1100 lh-m-base fs-7 mb-0" font="noto">
