--- a/src/scss/variables/_variables.scss
+++ b/src/scss/variables/_variables.scss
@@ -2,5 +2,6 @@ $gray-1100:#9B9893;
 $gray-1500:#707070;
 $yellow-1000:#FAA722;
 $yellow-1100:#83C51D;
+$yellow-1200:#FECB02;
 $red-1000:#DE4B63;
 $gray-1200:#A8B0B9;
