--- a/src/app/components/post-edit/post-edit.component.html
+++ b/src/app/components/post-edit/post-edit.component.html
@@ -5,8 +5,13 @@
   <div class="mb-3">
     <button type="button" class="py-1 px-4 rounded-1 custom-btn-black custom-btn-black--hover lh-base" font="noto">上傳圖片</button>
   </div>
-  <div class="mb-4">
-    <app-post-image></app-post-image>
+  <div>
+    <div class="mb-4">
+      <app-post-image></app-post-image>
+    </div>
+    <p font="noto" class="text-center fs-7 lh-m-base text-red-1100 mb-3">
+      圖片檔案過大，僅限 1mb 以下檔案<br> 圖片格式錯誤，僅限 JPG、PNG 圖片
+    </p>
   </div>
   <div class="d-flex justify-content-center">
     <button type="button" class="custom-btn-second custom-btn-gray-1200 custom-btn-yellow-1200--hover box-shadow-lb-1--hover box-shadow-black-hover text-black fs-6 lh-sm-base rounded-2">送出貼文</button>
