feat:添加like-user內容

--- a/src/app/components/like-user/like-user.component.html
+++ b/src/app/components/like-user/like-user.component.html
@@ -1,1 +1,25 @@
-<p>like-user works!</p>
+<div class="d-flex bg-white border border-2 bd-black box-shadow-d-2 box-shadow-black rounded-2 p-3">
+  <div class="d-flex align-items-center m-auto me-3">
+    <img class="like-user-photo" src="/assets/user.png" alt="">
+  </div>
+  <div class="d-flex justify-content-between w-100">
+    <div>
+      <p class="lh-base mb-0" font="noto">
+        愛爾敏
+      </p>
+      <p class="text-gray-1100 lh-m-base fs-7 mb-0" font="noto">
+        發文時間：2022/2/11 12:00
+      </p>
+    </div>
+    <div class="h-100 d-flex align-items-center fs-7 lh-m-base me-3" font="noto">
+      <div class="d-flex flex-column align-items-center me-3 pe-1">
+        <img class="like-icon" src="/assets/like.svg" alt="讚">
+        <p class="mb-0" font="noto">取消</p>
+      </div>
+      <div class="d-flex flex-column align-items-center ms-3 pe-1">
+        <img class="check-icon" src="/assets/circle-right-regular.svg" alt="查看">
+        <p class="mb-0" font="noto">查看</p>
+      </div>
+    </div>
+  </div>
+</div>
