--- a/src/app/pages/main/main.component.html
+++ b/src/app/pages/main/main.component.html
@@ -17,8 +17,11 @@
         <div >
           <app-following></app-following>
         </div>
-        <div>
+        <div hidden>
           <app-post-edit></app-post-edit>
+        </div>
+        <div>
+          <app-like-list></app-like-list>
         </div>
       </div>
       <div class="col-0 col-lg-4 d-none d-lg-block">
