feat:添加like btn,check btn hover 效果

--- a/src/app/components/like-user/like-user.component.scss
+++ b/src/app/components/like-user/like-user.component.scss
@@ -7,3 +7,8 @@
   width: 20px;
   height: 20px;
 }
+
+.like-btn:hover,.check-btn:hover {
+  filter: invert(12%) sepia(92%) saturate(3344%) hue-rotate(203deg) brightness(98%) contrast(98%);
+  cursor: pointer;
+}
