--- a/src/app/components/personal-profile/personal-profile.component.html
+++ b/src/app/components/personal-profile/personal-profile.component.html
@@ -1,1 +1,19 @@
-<p>personal-profile works!</p>
+<app-main-header-primary title="修改個人資料"></app-main-header-primary>
+
+
+<div class="personal-profile-bar d-flex ms-3">
+  <div (click)="toggleIsDisplayTab('personalProfileEdit')">
+    <h3 [ngClass]="{'text-white bg-black': isDisplayTab['personalProfileEdit'] , 'bg-white': !isDisplayTab['personalProfileEdit']}" class="rounded-top-2 border border-2 bd-black  d-flex justify-content-center align-items-center fs-6 lh-base py-2 px-4 mb-0" font="noto">暱稱修改</h3>
+  </div>
+  <div (click)="toggleIsDisplayTab('personalProfileChangePassword')">
+    <h3 [ngClass]="{'text-white bg-black': isDisplayTab['personalProfileChangePassword'] , 'bg-white': !isDisplayTab['personalProfileChangePassword']}" class="rounded-top-2 border border-2 bd-black d-flex justify-content-center align-items-center fs-6 lh-base py-2 px-4 mb-0" font="noto">重設密碼</h3>
+  </div>
+</div>
+<div>
+  <div>
+    <app-personal-profile-edit></app-personal-profile-edit>
+  </div>
+  <div>
+    <app-personal-profile-change-password></app-personal-profile-change-password>
+  </div>
+</div>
