feat:添加personal-profile 到main畫面

--- a/src/app/pages/main/main.component.html
+++ b/src/app/pages/main/main.component.html
@@ -20,8 +20,11 @@
         <div hidden>
           <app-post-edit></app-post-edit>
         </div>
-        <div>
+        <div hidden>
           <app-like-list></app-like-list>
+        </div>
+        <div>
+          <app-personal-profile></app-personal-profile>
         </div>
       </div>
       <div class="col-0 col-lg-4 d-none d-lg-block">
