feat:添加personal-profile 外框式樣

--- a/src/app/components/personal-profile/personal-profile.component.html
+++ b/src/app/components/personal-profile/personal-profile.component.html
@@ -9,7 +9,7 @@
     <h3 [ngClass]="{'text-white bg-black': isDisplayTab['personalProfileChangePassword'] , 'bg-white': !isDisplayTab['personalProfileChangePassword']}" class="rounded-top-2 border border-2 bd-black d-flex justify-content-center align-items-center fs-6 lh-base py-2 px-4 mb-0" font="noto">重設密碼</h3>
   </div>
 </div>
-<div>
+<div class="border border-2 bd-black rounded-2 bg-white box-shadow-d-2 p-5">
   <div>
     <app-personal-profile-edit></app-personal-profile-edit>
   </div>
