--- a/src/app/components/personal-profile-edit/personal-profile-edit.component.html
+++ b/src/app/components/personal-profile-edit/personal-profile-edit.component.html
@@ -1,1 +1,52 @@
-<p>personal-profile-edit works!</p>
+<div class="d-flex flex-column align-items-center">
+  <img
+    class="personal-profile-photo mb-3"
+    src="/assets/user.png"
+    alt="大頭貼"
+  /><button
+    type="button"
+    class="bg-black text-white fs-6 lh-base py-2 px-4"
+    font="noto"
+  >
+    上傳大頭照
+  </button>
+</div>
+<ul class="list-unstyled pb-2 mb-4">
+  <li class="d-flex flex-column mb-3">
+    <label for="nickName" class="fs-6 lh-base mb-1" font="noto">暱稱</label>
+    <input
+      class="custom-input custom-input-black"
+      id="nickName"
+      type="text"
+      placeholder="邊緣小杰"
+    />
+  </li>
+  <li class="d-flex flex-column">
+    <label class="fs-6 lh-base mb-1" font="noto">性別</label>
+    <ul class="list-unstyled d-flex mb-0 d-flex">
+      <li class="d-flex align-items-center me-4">
+        <input class="pe-2" type="radio" id="sexMale" name="sex" value="male" />
+        <label class="ms-1" for="sexMale">男性</label><br />
+      </li>
+      <li class="d-flex align-items-center">
+        <input class="pe-2" type="radio" id="sexFemale" name="sex" value="female" />
+        <label class="ms-1" for="sexFemale">女性</label><br />
+      </li>
+    </ul>
+  </li>
+</ul>
+<div class="d-flex justify-content-center mb-3">
+  <p class="text-center text-red-1100 fs-7 lh-m-base mb-0" font="noto">
+    1.圖片寬高比必需為 1:1，請重新輸入 <br />2. 解析度寬度至少
+    300像素以上，請重新輸入
+  </p>
+</div>
+<div class="d-flex justify-content-center w-100">
+  <button
+    type="button"
+    class="personal-profile-edit-submit custom-btn custom-btn-primary custom-btn-primary--hover w-100 fw-bold pt-3 pb-3"
+    font="azeret"
+  >
+    送出內容
+  </button>
+</div>
