feat:添加css btn組件

--- a/src/scss/component/_button.scss
+++ b/src/scss/component/_button.scss
@@ -54,3 +54,8 @@
   color: $black;
 }
 
+.custom-btn-secondary-disabled:disabled {
+  color: #fff;
+  background: $gray-1200;
+  border-color: $gray-1300;
+}
