feat:添加共通color式樣

--- a/src/scss/variables/_variables.scss
+++ b/src/scss/variables/_variables.scss
@@ -1,8 +1,9 @@
 $gray-1100:#9B9893;
+$gray-1200:#A8B0B9;
+$gray-1300:#808080;
 $gray-1500:#707070;
 $yellow-1000:#FAA722;
 $yellow-1100:#83C51D;
 $yellow-1200:#FECB02;
 $red-1000:#DE4B63;
 $red-1100:#F57375;
-$gray-1200:#A8B0B9;
