feat:添加共通border式樣

--- a/src/scss/utils/_border.scss
+++ b/src/scss/utils/_border.scss
@@ -4,8 +4,8 @@
 .bd-gray-1500 {
   border-color: $gray-1500!important;
 }
-.bd-black {
-  border-color: #000400!important;
+.bd-gray-1300 {
+  border-color: $gray-1300!important;
 }
 
 .custom-bd-b-1 {
