--- a/src/app/components/personal-profile-change-password/personal-profile-change-password.component.html
+++ b/src/app/components/personal-profile-change-password/personal-profile-change-password.component.html
@@ -1,1 +1,20 @@
-<p>personal-profile-change-password works!</p>
+<ul class="list-unstyled d-flex flex-column mb-0">
+  <li class="d-flex flex-column mb-3">
+    <label class="fs-6 lh-base mb-1" font="noto" for="newPassword">輸入新密碼</label>
+    <input class="custom-input border border-2 bd-black fs-6 lh-base" id="newPassword" type="text" placeholder="輸入新密碼" />
+  </li>
+  <li class="d-flex flex-column mb-3">
+    <label class="fs-6 lh-base mb-1" font="noto" for="checkNewPassword">再次輸入</label>
+    <input class="custom-input border border-2 bd-black fs-6 lh-base" id="checkNewPassword" type="text" placeholder="再次輸入新密碼" />
+  </li>
+</ul>
+<div>
+  <button
+    type="button"
+    class="custom-btn-secondary-disabled custom-btn custom-btn-primary custom-btn-yellow-1200--hover w-100 fw-bold pt-3 pb-3"
+    font="azeret"
+    [disabled]="true"
+  >
+  重設密碼
+  </button>
+</div>
