--- a/src/app/pages/main/main.component.html
+++ b/src/app/pages/main/main.component.html
@@ -1,3 +1,21 @@
+<ul class="d-flex list-unstyled">
+  <li class="me-3">
+    <a routerLink="/main/all-post">all-post</a>
+  </li>
+  <li class="me-3">
+    <a routerLink="/main/following">following</a>
+  </li>
+  <li class="me-3">
+    <a routerLink="/main/post-edit">post-edit</a>
+  </li>
+  <li class="me-3">
+    <a routerLink="/main/like-list">like-list</a>
+  </li>
+  <li class="me-3">
+    <a routerLink="/main/personal-profile">personal-profile</a>
+  </li>
+</ul>
+
 <div class="custom-bd-b-1 bd-black">
   <app-header></app-header>
 </div>
@@ -5,7 +23,8 @@
   <main class="container">
     <div class="row">
       <div class="col-12 col-lg-8">
-        <div class="mb-3" hidden>
+        <router-outlet></router-outlet>
+        <!-- <div class="mb-3" hidden>
           <app-post-personal-profile></app-post-personal-profile>
         </div>
         <div class="mb-3" hidden>
@@ -25,7 +44,7 @@
         </div>
         <div>
           <app-personal-profile></app-personal-profile>
-        </div>
+        </div> -->
       </div>
       <div class="col-0 col-lg-4 d-none d-lg-block">
         <app-sidebar></app-sidebar>
