fix: 修正sidebar背景色沒有正確反映，並添加圓角

--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -1,4 +1,4 @@
-<ul class="list-unstyled py-5 px-4 custom-bd-1 bd-black">
+<ul class="list-unstyled py-5 px-4 custom-bd-1 bd-black bg-white rounded-2">
   <li class="mb-4">
     <button type="button" class="custom-btn custom-btn-primary custom-btn-primary--hover w-100 fw-bold pt-3 pb-3" font="azeret">張貼動態</button>
   </li>
