feat: 在post裡添加comment內容

--- a/src/app/components/post/post.component.html
+++ b/src/app/components/post/post.component.html
@@ -26,8 +26,8 @@
     </div>
   </div>
   <ul class="list-unstyled">
-    <li *ngFor="let item of ary;let idx=index" class="" [class]="{'mb-3':idx!==(ary.length-1)}">
-      <app-comment></app-comment>
+    <li *ngFor="let comment of post.comments;let idx=index" class="" [class]="{'mb-3':idx!==(post.comments.length-1)}">
+      <app-comment [comment]="comment"></app-comment>
     </li>
   </ul>
 </div>
