feat: 在sidebar添加使用者大頭貼跟用戶名

--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -4,8 +4,8 @@
   </li>
   <li class="mb-4">
     <div class="d-flex align-items-center">
-      <img class=" me-3" src="/assets/user.png" alt="">
-      <p class="text-black fw-bold lh-base mb-0" font="noto">邊緣小杰</p>
+      <img class=" me-3" [src]="userImgUrl" alt="">
+      <p class="text-black fw-bold lh-base mb-0" font="noto">{{userProfile.nickName}}</p>
     </div>
   </li>
   <li class="mb-4">
